# real_state_backend/src/validators/user.validator.ts
@@ -34,6 +34,11 @@ export const resetPasswordSchema = z.object({
     password: z.string().min(6, "password must be atleast 6 characters long")
 })
 
+export const changePasswordSchema = z.object({
+    oldPassword: z.string().min(1, "Old password is required"),
+    newPassword: z.string().min(6, "New password must be at least 6 characters long")
+})
+
 // otp 
 
 export const sendOtpSchema = z.object({
@@ -55,3 +60,4 @@ export const updateProfileSchema = z.object({
 export type SignupInput = z.infer<typeof signupSchema>;
 export type SigninInput = z.infer<typeof signinSchema>;
 export type UpdateProfieInput = z.infer<typeof updateProfileSchema>
+export type ChangePasswordInput = z.infer<typeof changePasswordSchema>
